--- a/src/style.css
+++ b/src/style.css
@@ -173,10 +173,11 @@ header {
     border-radius: 16px;
     cursor: pointer;
     font-size: 2rem;
+    color: white;
 }
 
 .winning-page button:hover {
-    
+    filter: drop-shadow(0px 0px 10px var(--main-color));
 }
 
 .winning-page.show {
