--- a/src/style.css
+++ b/src/style.css
@@ -162,6 +162,7 @@ header {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
     color: white;
     font-size: 5rem;
 }
